src/objects/LeanData__Campaign_Influence_Summary__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Influence Summaries</relationshipLabel>
        <relationshipName>Campaign_Influence_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Existing_Opportunity_Amount__c</fullName>
        <label>Existing Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Run_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__New_Opportunity_Amount__c</fullName>
        <label>New Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__No_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Accounts__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Campaign_Members__c</fullName>
        <label>Number of Campaign Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Contacts_with_Role__c</fullName>
        <label>Number of Contacts with Role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Existing_Opportunities__c</fullName>
        <label>Number of Existing Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Leads__c</fullName>
        <label>Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_New_Opportunities__c</fullName>
        <label>Number of New Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__ROI__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Run_Parameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Parameters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_Campaign_Attribution__c</fullName>
        <label>Total Campaign Attribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_Campaign_Member_Attribution__c</fullName>
        <label>Total Campaign Member Attribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_Opportunity_Amount__c</fullName>
        <label>Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__objectType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>objectType ( Deprecated )</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Campaign Influence Summary</label>
    <nameField>
        <displayFormat>CIS-{000000000}</displayFormat>
        <label>Campaign Influence Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Influence Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>